Fix extra styling layout issues

--- a/packages/ed-resource/src/webapp/components/organisms/lists/BrowserResourceList/BrowserResourceList.scss
+++ b/packages/ed-resource/src/webapp/components/organisms/lists/BrowserResourceList/BrowserResourceList.scss
@@ -30,6 +30,7 @@
     padding: 0 0 62px 0;
     > .list-card-footer {
       margin-left: 0;
+      border-top: none;
       > .tertiary-button {
         border-radius: 12px;
       }
