--- a/packages/web-user/src/webapp/ui/components/pages/UserSettings/UserSettings.scss
+++ b/packages/web-user/src/webapp/ui/components/pages/UserSettings/UserSettings.scss
@@ -6,8 +6,12 @@
   // grid-column-gap: 40px;
   // justify-items: center;
 
-  @media screen and (min-width: 800px) and (max-width: 1400px) {
-    // grid-template-columns: 240px repeat(1, auto);
+  // @media screen and (min-width: 800px) and (max-width: 1400px) {
+  // grid-template-columns: 240px repeat(1, auto);
+  // }
+
+  @media screen and (max-width: 1000px) {
+    margin-top: -40px;
   }
 
   > * {
